--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/alk-chat
-spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.username=test
+spring.datasource.password=test
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
